# Multi-Class-URLs-ML-DL-Detection-Models

./: .gitignore  BAO_CAO_DU_AN.md  CNN_MODEL_WITH_MULTI_LABELS_21_FEATURES.keras  Colab_Script.txt  DeAnTTTN.txt  LyThuyet.txt  Multi-Classes-Dataset-Generator.ipynb  Multi-Classes-URLs-ML&DL-Detection-Models.ipynb  Multi_Labels_URLs_ML&DL_Detection_Models.ipynb  PROJECT_SUMMARY.md  README.md  cleaned_head.txt  clear_cache.bat  config.py  firebase_db_design_v2.json  force_reload.py  multi-labels-urls-firebase-db-default-rtdb-export (1).json  multi-labels-urls-firebase-db-default-rtdb-export (5).json  multi_labels_urls_ml&dl_detection_models.py  requirements.txt  run.py  scaler.pkl  temp.txt  test.json  tfidf_vectorizer.pkl  tri_TTTN_ML_DL (1).ipynb  tri_tttn_ml_dl.py
app/: __init__.py  routes.py
brower-extension/: background.js  content.js  manifest.json  popup.html  popup.js  style.css
configs/: config.py
models/: CNN_MODEL_ON_NON_NUMERICAL_FEATURES.keras  CNN_MODEL_ON_NUMERICAL_FEATURES.keras  XGB_MODEL_ON_NUMERICAL_FEATURES.pkl
nyarlathotep-web-crawler/: crawling_chaos.js
script/: predict_21_features.py  url_extractor_21_features.py
scripts/: csv_to_jsonl.py  dataset_balancer.py  dataset_gen.py  dataset_merger.py  gsb.py  test.py  (+15 more)
templates/: 404.html  500.html  allbrands.txt  analysis.html  analysis_dashboard.html  app.py  base.html  config.py  dataset_merger.py  history.html  index.html  main.py  model_info.html  multi_model_prediction.html  navigation.html  pyproject.toml  quick_prediction.html  replit.md  settings.html  url_multi_labels_predictor.py
(+9 files in other folders)
