[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "dnspython>=2.7.0",
    "email-validator>=2.2.0",
    "firebase-admin>=7.1.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "joblib>=1.5.1",
    "levenshtein>=0.27.1",
    "lxml>=6.0.0",
    "nltk>=3.9.1",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "psycopg2-binary>=2.9.10",
    "pyquery>=2.0.1",
    "python-whois>=0.9.5",
    "requests>=2.32.4",
    "scikit-learn>=1.3.0",
    "tensorflow>=2.13.0,<2.16.0",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
    "werkzeug>=3.1.3",
    "whois>=1.20240129.2",
]
